# archived-smartcube

./: .cproject  .project  CMakeLists.txt  Makefile  ReadMe
src/: CMakeLists.txt
src/aggregate/: AggAverage.cpp  AggAverage.h  AggAverageApp.cpp  AggAverageApp.h  AggCount.cpp  AggCount.h  AggCountApp.cpp  AggCountApp.h  AggMax.cpp  AggMax.h  AggMaxApp.cpp  AggMaxApp.h  AggMaxN.cpp  AggMaxN.h  AggMaxNApp.cpp  AggMaxNApp.h  AggMin.cpp  AggMin.h  AggMinApp.cpp  AggMinApp.h  AggMinN.cpp  AggMinN.h  AggMinNApp.cpp  AggMinNApp.h  AggQuantile.cpp  AggQuantile.h  AggQuantileApp.cpp  AggQuantileApp.h  AggSum.cpp  AggSum.h  AggSumApp.cpp  AggSumApp.h  CMakeLists.txt  Count.cpp  Count.h  CountApp.cpp  CountApp.h  Head.cpp  Head.h  HeadApp.cpp  (+9 more)
src/bitwise/: BitAnd.cpp  BitAnd.h  BitAndApp.cpp  BitAndApp.h  BitNot.cpp  BitNot.h  BitNotApp.cpp  BitNotApp.h  BitOr.cpp  BitOr.h  BitOrApp.cpp  BitOrApp.h  BitXor.cpp  BitXor.h  BitXorApp.cpp  BitXorApp.h  CMakeLists.txt
src/cleansing/: Backfill.cpp  Backfill.h  BackfillApp.cpp  BackfillApp.h  CMakeLists.txt  Convert.cpp  Convert.h  Default.cpp  Default.h  DefaultApp.cpp  DefaultApp.h  HtmlTable.py  xcls.htmltable.sh
src/column/: CMakeLists.txt  Combine.cpp  Combine.h  CombineApp.cpp  CombineApp.h  Expand.cpp  Expand.h  ExpandApp.cpp  ExpandApp.h  ReSplit.cpp  ReSplit.h  ReSplitApp.cpp  ReSplitApp.h  Select.cpp  Select.h  SelectApp.cpp  SelectApp.h  Split.cpp  Split.h  SplitApp.cpp  SplitApp.h
src/common/: CMakeLists.txt  Cell.cpp  Cell.h  ConsoleApp.cpp  ConsoleApp.h  DummyInput.cpp  DummyInput.h  DummyOutput.cpp  Error.cpp  Error.h  FileInput.cpp  FileInput.h  FileOutput.cpp  ForkOutput.h  Input.cpp  Input.h  JoinInput.h  MemoryInput.cpp  MemoryOutput.h  Output.cpp  Output.h  Pipeline.cpp  Pipeline.h  Record.cpp  Record.h  RecordImpl.h  RecordPool.cpp  RecordPool.h  Routine.cpp  Routine.h  RoutineImpl.h  SharedQueue.cpp  SharedQueue.h  Starter.cpp  Starter.h  StringUtil.cpp  StringUtil.h  TestCompare.cpp  common.cmake
src/datetime/: CMakeLists.txt  TimeDelta.cpp  TimeDelta.h
src/encode/: Base64Dec.cpp  Base64Dec.h  Base64DecApp.cpp  Base64DecApp.h  Base64Enc.cpp  Base64Enc.h  Base64EncApp.cpp  Base64EncApp.h  CMakeLists.txt  Crc32.cpp  Crc32.h  HexDec.cpp  HexDec.h  HexDecApp.cpp  HexDecApp.h  HexEnc.cpp  HexEnc.h  HexEncApp.cpp  HexEncApp.h  Md5.cpp  Md5.h  Oct.cpp  Oct.h  UrlEncode.cpp  UrlEncode.h
src/group/: CMakeLists.txt  CombineGroup.cpp  CombineGroup.h  Group.cpp  Group.h  GroupApp.cpp  GroupApp.h  GroupConvert.cpp  GroupConvert.h  GroupSize.cpp  GroupSize.h  InGroup.cpp  InGroup.h  OutGroup.cpp  OutGroup.h  SplitGroup.cpp  SplitGroup.h  Ungroup.cpp  Ungroup.h  UngroupApp.cpp  UngroupApp.h
src/io/: CMakeLists.txt  DummyInput.h  DummyOutput.h  FileInput.cpp  FileInput.h  FileOutput.cpp  FileOutput.h  ForkOutput.cpp  HttpInput.cpp  HttpInput.h  JoinInput.cpp  LineInput.cpp  LineInput.h  MemoryInput.h  MemoryOutput.cpp  SimpleInput.cpp  SimpleInput.h  SimpleOutput.cpp  SimpleOutput.h  io.cmake
src/logic/: And.cpp  And.h  AndApp.cpp  AndApp.h  CMakeLists.txt  Cmp.cpp  Cmp.h  CmpApp.cpp  CmpApp.h  Eq.cpp  Eq.h  EqApp.cpp  EqApp.h  Ge.cpp  Ge.h  GeApp.cpp  GeApp.h  Gt.cpp  Gt.h  GtApp.cpp  GtApp.h  Le.cpp  Le.h  LeApp.cpp  LeApp.h  Lt.cpp  Lt.h  LtApp.cpp  LtApp.h  Ne.cpp  Ne.h  NeApp.cpp  NeApp.h  Not.cpp  Not.h  NotApp.cpp  NotApp.h  Or.cpp  Or.h  OrApp.cpp  (+5 more)
src/math/: Add.cpp  Add.h  AddApp.cpp  AddApp.h  CMakeLists.txt  Ceil.cpp  Ceil.h  CeilApp.cpp  CeilApp.h  Div.cpp  Div.h  DivApp.cpp  DivApp.h  Exp.cpp  Exp.h  ExpApp.cpp  ExpApp.h  Floor.cpp  Floor.h  FloorApp.cpp  FloorApp.h  Grade.cpp  Grade.h  GradeApp.cpp  GradeApp.h  Log.cpp  Log.h  LogApp.cpp  LogApp.h  Mul.cpp  Mul.h  MulApp.cpp  MulApp.h  Round.cpp  Round.h  RoundApp.cpp  RoundApp.h  Sign.cpp  Sign.h  SignApp.cpp  (+5 more)
src/matrix/: CMakeLists.txt  MatrixContrib.py  MatrixDiff.py  MatrixHead.cpp  MatrixHead.h  MatrixHeadApp.cpp  MatrixHeadApp.h  MatrixSQL.cpp  MatrixSQL.data  MatrixSQL.h  MatrixSQL.py  MatrixUnhead.cpp  MatrixUnhead.h  MatrixUnheadApp.cpp  MatrixUnheadApp.h  xmatrix.contrib.sh  xmatrix.diff.sh  xmatrix.sql  xmatrix.sql.sh
src/misc/: CMakeLists.txt  Norm.cpp  Norm.h  NormApp.cpp  NormApp.h
src/python/: CMakeLists.txt  InputWrapper.cpp  InputWrapper.h  Module.cpp  Module.h  OutputWrapper.cpp  OutputWrapper.h  PythonWrapperApp.cpp  PythonWrapperApp.h  RecordHelper.cpp  RecordHelper.h  RoutineWrapper.cpp  RoutineWrapper.h  sample.py
src/reader/: FileReader.cpp  FileReader.h  MySQLReader.cpp  MySQLReader.h  SqliteReader.cpp  SqliteReader.h
src/row/: CMakeLists.txt  Filter.cpp  Filter.h  FilterApp.cpp  FilterApp.h  HashJoin.cpp  HashJoin.h  SymJoin.cpp  SymJoin.h
src/string/: CMakeLists.txt  Len.cpp  Len.h  LenApp.cpp  LenApp.h  ReFormat.cpp  ReFormat.h  ReFormatApp.cpp  ReFormatApp.h  ReReplace.cpp  ReReplace.h  ReReplaceApp.cpp  ReReplaceApp.h  Strip.cpp  Strip.h  StripApp.cpp  StripApp.h  Substr.cpp  Substr.h  SubstrApp.cpp  SubstrApp.h
src/writer/: FileWriter.cpp  FileWriter.h  MySQLWriter.cpp  MySQLWriter.h  SqliteWriter.cpp  SqliteWriter.h
