cmake_minimum_required(VERSION 2.6)

add_subdirectory(common)
add_subdirectory(aggregate)
add_subdirectory(bitwise)
add_subdirectory(cleansing)
add_subdirectory(column)
add_subdirectory(encode)
add_subdirectory(group)
add_subdirectory(logic)
add_subdirectory(math)
add_subdirectory(misc)
add_subdirectory(row)
add_subdirectory(string)

add_subdirectory(python)