cmake_minimum_required(VERSION 2.6)

#
# group operators
#
    
# xgroup
add_library(xcommon
    ConsoleApp.h
    ConsoleApp.cpp
    Error.h
    Error.cpp
    Input.h
    Input.cpp
    Output.h
    Output.cpp
    Routine.h
    Routine.cpp
    Record.h
    Record.cpp
    RecordPool.h
    RecordPool.cpp
    SharedQueue.h
    SharedQueue.cpp
    )
    